--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <button id="download-svg" class="btn btn-primary">Download SVG</button>
       <!-- footer -->
       <div class="footer-container">
-       <p>Data Mapper is a project by <a href="/">Keith Collins</a>. View source <a href="https://github.com/keithcollins/keithcollins.github.io/tree/master/data-mapper">here</a>.
+       <p>Data Mapper is a project by <a href="/">Keith Collins</a>. See the code or fork it <a href="https://github.com/keithcollins/data-mapper">here</a>.
       <p>Made possible by <a href="http://d3js.org">D3.js</a>, <a href="http://bost.ocks.org/mike/bubble-map/">Let's Make a Bubble Map</a>, and this <a href="http://bl.ocks.org/mbostock/4060606">Choropleth example</a> by Mike Bostock.</p>
       <p>Inspired by <a href="http://bl.ocks.org/shancarter/raw/4748131/">Mister Nester</a> and <a href="http://shancarter.github.io/mr-data-converter/">Mr. Data Converter</a> by Shan Carter.</p>
       </div>
