--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   });
 })();
 
-// google analytics
+// google
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-19469914-2']);
 _gaq.push(['_trackPageview']);
