fixed svg button

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 })();
 
 
-// google
+// google analytics
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-19469914-2']);
 _gaq.push(['_trackPageview']);
