--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-<link href="../css/bootstrap.min.css" media="all" rel="stylesheet" />
-<link href="../css/index.css" media="all" rel="stylesheet" />
-<link href="datamapper.css" media="all" rel="stylesheet" />
+<link href="css/bootstrap.min.css" media="all" rel="stylesheet" />
+<link href="css/index.css" media="all" rel="stylesheet" />
+<link href="css/datamapper.css" media="all" rel="stylesheet" />
 
 <div id="main-container">
 
@@ -69,9 +69,9 @@
 </div><!--/main-container-->
 
 <!-- js -->
-<script src="../js/all.js"></script>
-<script src="../js/FileSaver.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="js/all.js"></script>
+<script src="js/FileSaver.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="datamapper.js"></script>
 <script type="text/javascript">
 (function() {
